tests/type-reconstruction/ill-typed/infinite-type/infinite-type-2.stella
language core;

extend with #type-reconstruction;
  
fn f(n : auto) -> auto {
  return f;
}

fn main(n : auto) -> auto {
  return f(f);
}